# basketball-hackathon-course

./: .gitattributes  .gitignore  PROJECT_PLAN.md  README.md  init_colab.ipynb  pyproject.toml  python_basketball_hackathon_course_material.tex  requirements.txt  workshop_schedule_updated.tex
assets/: README.md
d1/: d1_01_colab_and_coordinate_click_tool.ipynb  d1_02_homography_point_projection.ipynb  d1_03_keypoint_annotation_roboflow_lab.ipynb  d1_04_bbox_homework_setup.ipynb
d2/: d2_02_yolo26_detection_preview.ipynb  d2_03_roboflow_bbox_training_preview.ipynb  d2_04_bbox_to_bev_integration.ipynb
d3/: d3_01_tracking_concept_iou_association.ipynb  d3_02_bytetrack_demo_with_sample_boxes.ipynb  d3_03_tracking_to_bev_mini_project.ipynb
d4/: d4_01_upload_and_convert_shooting_video.ipynb  d4_02_mediapipe_pose_angle_lab.ipynb  d4_03_ball_tracking_and_release_point_lab.ipynb
d5/: d5_01_shooting_analysis_pipeline_runner.ipynb  d5_02_report_visualization_builder.ipynb  d5_03_showcase_export.ipynb
day1/: d1_01_colab_and_coordinate_click_tool.ipynb  d1_01_keypoint_pairing_homography.ipynb  d1_02_homography_point_projection.ipynb  d1_02_keypoint_annotation_roboflow_lab.ipynb  d1_03_bbox_homework.ipynb  d1_03_bbox_homework_setup.ipynb  d1_03_keypoint_annotation_roboflow_lab.ipynb  d1_04_bbox_homework_setup.ipynb
day2/: d2_01_manual_detection_box_to_bev.ipynb  d2_01_yolo26_detection.ipynb  d2_02_yolo26_detection.ipynb  d2_02_yolo26_detection_preview.ipynb  d2_02_yolo_players_to_bev.ipynb  d2_03_bbox_to_bev_integration.ipynb  d2_03_roboflow_bbox_training.ipynb  d2_03_roboflow_bbox_training_preview.ipynb  d2_04_bbox_to_bev_integration.ipynb
day3/: d3_01_tracking_concept_iou_association.ipynb  d3_02_bytetrack_demo_with_sample_boxes.ipynb  d3_02_yolo_bytetrack_tracking.ipynb  d3_03_team_clustering.ipynb  d3_03_tracking_to_bev_mini_project.ipynb  d3_04_team_clustering.ipynb
day4/: d4_01_roboflow_ball_detector_training.ipynb  d4_01_upload_and_convert_shooting_video.ipynb  (+5 more)
(+21 files in other folders)
